# search_dir

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  search.rs  tests.rs
