[package]
name = "search_dir"
version = "0.1.2"
edition = "2021"
authors = ["Natan"]
keywords = ["search", "directory", "find", "folder", "files"]
categories = ["algorithms", "filesystem"]
readme = "README.md"
repository = "https://github.com/NatanFreeman/search_dir"
license = "Apache-2.0"
license-file = "LICENCE"
description="A Rust library for finding the first matching item in a directory."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-recursion = "1.0.0"
futures="0.3.21"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
